--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Raleway', sans-serif;
     /* font-family: Arial, Helvetica, sans-serif; */
+    height: 120vh;
 }
 
 #extrovert{
